profilelist1exp/unpackaged/objects/SM_Search_Usage_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMSearch_Button_click_Date_Time__c</fullName>
        <label>SMSearch Button click Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SM_Error_Message__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SM Error Message</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <label>Sales Rep Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Team_Role__c</fullName>
        <label>Sales Rep Team Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Title__c</fullName>
        <label>Sales Rep Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment_Business_Unit__c</fullName>
        <label>Segment Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Name__c</fullName>
        <label>Solution Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SM Search Usage Tracker</label>
    <nameField>
        <label>SM Search Usage Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SM Search Usage Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>